Fix file button overflow

--- a/apps/lite/ui/src/routes/project-shared.module.css
+++ b/apps/lite/ui/src/routes/project-shared.module.css
@@ -66,6 +66,9 @@
 
 .fileButton {
 	flex-grow: 1;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .selected {
